# cortex

./: .gitignore  AGENTS.md  Cargo.toml  README.md  STANDARDS.md  install.sh
.github/workflows/: ci.yml  nightly.yml  release.yml
docs/: loops.md  prd.md  prompt.md  release.md  roadmap.md
docs/issues/: 17-plan.md  18-plan.md  19-plan.md  20-plan.md  27-plan.md
docs/prompts/: release-notes-v0.1.0-goal.md
docs/releases/: v0.1.0.md
src/: app.rs  buffer.rs  cli.rs  commands.rs  highlighter.rs  input.rs  keymap.rs  main.rs  picker.rs  renderer.rs  terminal.rs  update.rs  view.rs
