[package]
name = "cortex"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/owainlewis/cortex"
description = "A fast, lightweight, macOS-only terminal code editor."

[dependencies]
crossterm = "0.27"
ropey = "1.6"
tree-sitter = "0.26.9"
tree-sitter-highlight = "0.26.9"
tree-sitter-javascript = "0.25.0"
tree-sitter-json = "0.24.8"
tree-sitter-md = "0.5.3"
tree-sitter-ocaml = "0.25.0"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.2"
tree-sitter-toml-ng = "0.7.0"
tree-sitter-typescript = "0.23.2"
